<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dip"
    android:layout_height="match_parent"
    android:background="@color/layout_bg"
    android:padding="5dip"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:text="@string/please_input_title"
        style="@style/system_text_one"
        />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/divider_bg"
        />
    
    <EditText 
        android:id="@+id/title_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/system_text_one"
        android:layout_margin="5dip"
        android:hint="@string/title"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/divider_bg"
        />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        
        <Button 
            android:id="@+id/cancel_bn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/cancel"
            style="@style/system_text_one"
            android:background="@drawable/button_bg"
            />
        <TextView 
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="@color/divider_bg"
            />
        <Button 
            android:id="@+id/ok_bn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/sure"
            style="@style/system_text_one"
            android:background="@drawable/button_bg"
            />
        
        
    </LinearLayout>

</LinearLayout>
